# GreenHomeLan_RpiCamera

./: .gitignore  README.md
Server_Box/: README.md  package-lock.json  (+2 more)
Server_Box/server_box/: README.md  app.py  pyproject.toml
Server_Box/server_box/common/exception/: code.py  handler.py
Server_Box/server_box/config/: server-box-config.yml  telnet_commands.yml
Server_Box/server_box/interfaces/wifi_interface/: service.py
Server_Box/server_box/managers/wifi_bands_manager/: service.py
Server_Box/server_box/rest_api/wifi_controler/: rest_controler.py  rest_model.py
Server_Box/server_box/server/: app.py
Server_Box/server_box/server/config/: logging-config.yml  server-box-config.yml  telnet_commands.yml  thread_network_nodes.yml
Server_Box/server_box/server/orchestrator/: __init__.py  model.py  service.py
Server_Box/server_box/service/: rpi-box.service
Server_Box/server_box/tests/: __init__.py
server_camera/: README.md  pyproject.toml  requirements.txt
server_camera/server/: app.py
server_camera/server/common/: __init__.py
server_camera/server/common/exception/: __init__.py  code.py  handler.py  model.py
server_camera/server/config/: logging-config.yml  server-camera-config.yml  wifi-thread-commands.yml
server_camera/server/interfaces/gpio_interface/: __init__.py  service.py
server_camera/server/interfaces/mqtt_interface/: __init__.py  client.py  model.py
server_camera/server/notification/: __init__.py  service.py
server_camera/service/: rpi-camera.service
server_camera/test/: test_gpio.py  test_save_frames.py  test_save_video.py
(+59 files in other folders)
