[tool.poetry]
name = "server-box"
version = "1.0.0"
description = ""
authors = ["Nicolas HERNANDEZ <nicolas.hernandezpaez@orange.com>, David CIBAUD <david.cibaud@orange.com>, Jean-Baptste PERIN <jean-baptiste.perin@orange.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "2.0.1"
flask-smorest = "^0.34.0"
PyYAML = "^5.4.1"
pyserial = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-mock = "^3.8.1"
black = "^22.3.0"
pylint = "^2.14.3"
pytest-cov = "^3.0.0"
